@@ -1,1 +1,3 @@
-./configure
+
+./configure --prefix=/usr/local --exec-prefix=/usr/local
+
