@@ -1,3 +1,14 @@
+2010-04-14  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* tcl.m4    - Backport a lot of quoting fixes from tcl8.6/unix/tcl.m4
+	            - Fix determination of CYGPATH for CYGWIN
+	  With those fixes, itcl and tdbc compile fine with CYGWIN
+
+2010-04-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* install-sh         [Bug 2982540] configure and install* script files
+	                     should always have LF
+
 2010-02-19  Stuart Cassoff  <stwo@users.sourceforge.net>
 
 	* tcl.m4: Correct compiler/linker flags for threaded builds on
